# buenotea

./: .gitignore  Cargo.toml  DATABASE_READY_CONFIRMATION.md  FUNDAMENTALS_TIMESERIES_SETUP.md  INVITE_LIST_TIMESERIES_SETUP.md  README.md  SENTIMENT_ANALYSIS.md  SENTIMENT_API_TRACKING_COMPLETE.md  SENTIMENT_ENHANCEMENT_PLAN.md  SENTIMENT_FIXES_APPLIED.md  SENTIMENT_NULL_ANALYSIS.md  SENTIMENT_TIMESERIES_SETUP.md  TIMING_ANALYSIS.md  TIMING_FIXES_APPLIED.md
.cursor/rules/: rules.mdc
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ai/: chatgpt_service.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: check_market_regime_tables.sql  convert_fundamentals_to_history.sql  convert_invite_list_to_history.sql  convert_market_regime_to_history.sql  convert_sentiment_to_history.sql  convert_timing_to_history.sql  create_fundamentals_table.sql  create_invite_list_table.sql  create_market_regime_table.sql  create_regime_table.sql  fix_market_regime_history.sql  recreate_all_tables.sql  recreate_market_regime_history.sql  update_fundamentals_scoring.sql
crates/infrastructure/scripts/: migrate_fundamentals_to_timeseries.sh  migrate_invite_list_to_timeseries.sh  migrate_sentiment_to_timeseries.sh  migrate_timing_to_timeseries.sh  run_fundamentals_batch_analysis.sh  run_fundamentals_status_check.sh  run_invite_list.sh  run_invite_list_analysis.sh  run_sentiment_analysis.sh  run_sentiment_batch_analysis.sh  run_timing_batch_analysis.sh  run_with_your_credentials.sh  setup_supabase.sh
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/database/: client.rs  fundamentals_models.rs  fundamentals_storage.rs  invite_list_storage.rs  market_regime_models.rs  mod.rs  models.rs  sentiment_models.rs  sentiment_storage.rs  timing_models.rs  timing_storage.rs
crates/lambda/: Cargo.toml  build.sh
crates/lambda/src/: lib.rs
crates/site/: README.md  SETUP.md  next.config.ts  package-lock.json  package.json
crates/site/app/: layout.tsx  page.tsx
crates/site/app/api/stats/: route.ts
crates/site/app/api/timing/changes/: route.ts
crates/site/app/api/timing/history/[symbol]/: route.ts
crates/site/app/api/timing/latest/: route.ts
crates/site/app/api/timing/latest/[symbol]/: route.ts
crates/site/app/timing/: page.tsx
crates/site/app/timing/[symbol]/: page.tsx
crates/site/components/charts/: HistoryChart.tsx
crates/site/components/layout/: Footer.tsx  Header.tsx
crates/site/components/timing/: RiskBadge.tsx  SignalBadge.tsx
crates/site/lib/: server-supabase.ts  supabase.ts  utils.ts
crates/studies/fundamentals/: Cargo.toml
crates/studies/fundamentals/examples/: fundamentals_aapl_example.rs  fundamentals_batch_analysis.rs  fundamentals_batch_to_supabase.rs  fundamentals_status_check.rs  fundamentals_to_supabase.rs
crates/studies/fundamentals/src/: calculator.rs  fundamentals_models.rs  fundamentals_storage.rs  lib.rs  models.rs
crates/studies/invite-list/: Cargo.toml  TIMESERIES_GUIDE.md
crates/studies/invite-list/examples/: invite_list_simple.rs  invite_list_to_supabase.rs
crates/studies/invite-list/src/: calculator.rs  fetcher.rs  invite_list_storage.rs  lib.rs
crates/studies/regime/: Cargo.toml
crates/studies/regime/examples/: market_regime_analysis.rs  market_regime_batch_to_supabase.rs  market_regime_to_supabase.rs  regime_aapl_example.rs  regime_aapl_mock_example.rs  regime_analysis_to_supabase.rs  regime_save_to_db.rs  regime_to_supabase.rs  regime_to_supabase_real.rs
crates/studies/regime/src/: calculator.rs  lib.rs  market_regime_models.rs  market_regime_storage.rs  models.rs
crates/studies/sentiment/: Cargo.toml
crates/studies/sentiment/examples/: sentiment_batch_analysis.rs  sentiment_batch_parallel.rs  sentiment_batch_robust.rs  sentiment_batch_to_supabase.rs  sentiment_example.rs  sentiment_force_rerun.rs  sentiment_invite_list_batch.rs  sentiment_test_subset.rs  sentiment_to_supabase.rs
crates/studies/sentiment/src/: calculator.rs  lib.rs  models.rs  sentiment_models.rs  sentiment_storage.rs
crates/studies/timing/: Cargo.toml
crates/studies/timing/examples/: timing_analysis_batch.rs  timing_batch_to_supabase.rs
crates/studies/timing/src/: calculator.rs  indicators.rs  lib.rs  models.rs  timing_models.rs  timing_storage.rs
database_migrations/: create_timing_table.sql  update_timing_scoring_system.sql
docs/: PROJECT_STRUCTURE.md  QUICK_START.md  SUPABASE_DATA_STRUCTURE.md
docs/RULES/: CONTRACTS.md  DATA_SOURCES.md  DECISIONS.md  ENVIRONMENT_SETUP.md  PITFALLS.md
examples/fundamentals/: fundamentals_aapl_example.rs  fundamentals_batch_analysis.rs  fundamentals_status_check.rs  fundamentals_to_supabase.rs
examples/invite_list/: invite_list_simple.rs  invite_list_to_supabase.rs
examples/regime/: market_regime_analysis.rs  market_regime_to_supabase.rs  regime_aapl_example.rs  regime_aapl_mock_example.rs  regime_analysis_to_supabase.rs  regime_save_to_db.rs  regime_to_supabase.rs  regime_to_supabase_real.rs
examples/sentiment/: sentiment_batch_analysis.rs  sentiment_batch_parallel.rs  sentiment_batch_robust.rs  sentiment_example.rs  sentiment_force_rerun.rs  sentiment_test_subset.rs  sentiment_to_supabase.rs
examples/timing/: timing_analysis_batch.rs
scripts/: run_fundamentals_batch_analysis.sh  run_regime_analysis.sh  run_regime_direct.sh  run_sentiment_batch_analysis.sh  run_timing_batch_analysis.sh
src/: error.rs  lib.rs
src/ai/: chatgpt_service.rs  mod.rs
src/database/: client.rs  fundamentals_storage.rs  invite_list_storage.rs  market_regime_models.rs  mod.rs  models.rs  sentiment_storage.rs  timing_models.rs  timing_storage.rs
src/fundamentals/: calculator.rs  mod.rs
src/invite_list/: calculator.rs  fetcher.rs  mod.rs  models.rs
src/regime/: calculator.rs  mod.rs
src/sentiment/: HOWTO.md  calculator.rs  mod.rs
src/timing/: calculator.rs  indicators.rs  mod.rs
