[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/infrastructure",
    "crates/studies/timing",
    "crates/studies/sentiment",
    "crates/studies/regime",
    "crates/studies/fundamentals",
    "crates/studies/invite-list",
    "crates/cli",
    "crates/lambda",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Felipe Hangen"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# URL encoding
urlencoding = "2.1"

# Futures utilities
futures = "0.3"

# Lambda runtime
lambda_runtime = "0.8"
aws_lambda_events = "0.10"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Internal crates
buenotea-core = { path = "crates/core" }
buenotea-infrastructure = { path = "crates/infrastructure" }
buenotea-timing = { path = "crates/studies/timing" }
buenotea-sentiment = { path = "crates/studies/sentiment" }
buenotea-regime = { path = "crates/studies/regime" }
buenotea-fundamentals = { path = "crates/studies/fundamentals" }
buenotea-invite-list = { path = "crates/studies/invite-list" }

