[package]
name = "buenotea-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

# Environment variables
dotenv.workspace = true

