[package]
name = "buenotea-invite-list"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
buenotea-core.workspace = true
buenotea-infrastructure.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Date/time handling
chrono.workspace = true

# Error handling
anyhow.workspace = true

# Environment variables
dotenv.workspace = true

# URL encoding
urlencoding.workspace = true

[[example]]
name = "invite_list_simple"
path = "examples/invite_list_simple.rs"

[[example]]
name = "invite_list_to_supabase"
path = "examples/invite_list_to_supabase.rs"

